--- a/ubercustomer/templates/registration/registration_form.html
+++ b/ubercustomer/templates/registration/registration_form.html
@@ -3,7 +3,8 @@
 <div class="container">
   <div class="row">
     <!-- Empty div -->
-    <div class="col-md-4 col-md-offset-4">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
       {% if form.errors %}
         <p> Some Information Might be Incorrect </p>
       {% endif %}
@@ -31,7 +32,7 @@
 
     </div>
     <!-- empty div -->
-  
+    <div class="col-md-4"></div>
   </div>
 </div>
 
