--- a/ubercustomer/templates/registration/login.html
+++ b/ubercustomer/templates/registration/login.html
@@ -3,8 +3,9 @@
 {% block content %}
 <div class="container">
   <div class="row">
-
-    <div class="col-md-4 col-md-offset-4">
+    <!-- Empty div -->
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
       {% if form.errors %}
         <p> Password or Username is incorrect </p>
       {% endif %}
@@ -32,6 +33,8 @@
       </div>
 
     </div>
+    <!-- empty div -->
+    <div class="col-md-4"></div>
   </div>
 </div>
 
