--- a/uber/templates/joint/joint.html
+++ b/uber/templates/joint/joint.html
@@ -1,3 +1,3 @@
 <h1>Welcome {{user.username}}! Are you a driver or a passenger?</h1>
-<button><a href="/driver/"> Driver </a></button>
+<button><a href="/driver/profile/car"> Driver </a></button>
 <button><a href="/customer"> Passenger </a></button>
