--- a/uberdriver/templates/driver/car_edit.html
+++ b/uberdriver/templates/driver/car_edit.html
@@ -5,7 +5,7 @@
     <div class="row">
 
         <div class="col-md-4 col-md-offset-4">
-            <h3>Create Profile</h3>
+            <h3>Fill in the details about your car</h3>
                 {{form.media}}
                 {% block styles %} {% bootstrap_css %}
                   <link rel="stylesheet" href="#"> {% endblock %}
@@ -13,7 +13,7 @@
                 <form action="{% url 'carprofile' %}">
                     {% csrf_token %}
                     {% bootstrap_form form %}
-                
+                <input type="submit" value="Submit">
                 </form>
         </div>
     </div>
