the bloody forms are working

--- a/uberdriver/templates/driver/car_edit.html
+++ b/uberdriver/templates/driver/car_edit.html
@@ -10,11 +10,12 @@
                 {% block styles %} {% bootstrap_css %}
                   <link rel="stylesheet" href="#"> {% endblock %}
                 
-                <form action="{% url 'carprofile' %}">
-                    {% csrf_token %}
-                    {% bootstrap_form form %}
-                <input type="submit" value="Submit">
-                </form>
+                  <form  action="{%url 'carprofile'%}" method="post" enctype="multipart/form-data">
+                    {%csrf_token%}
+                
+                    {% bootstrap_form form%}
+                    <input type="submit" class="btn btn-success btn-lg" value="Post">
+                  </form>
         </div>
     </div>
 </div>
