--- a/uberdriver/templates/driver/index.html
+++ b/uberdriver/templates/driver/index.html
@@ -11,7 +11,7 @@
 
 <div class="driver_options">
         <hr>
-    <a href="">See scheduled rides</a> | <a href="">Change scheduled rides</a> | <a href="{% url 'createprofile' %}">Edit Profile</a> | <a href="{% url 'carprofile' %}">Edit car details</a>
+    <a href="">See scheduled rides</a> | <a href="{% url 'driverdestination'%}">Schedule ride</a> | <a href="{% url 'createprofile' %}">Edit Profile</a> | <a href="{% url 'carprofile' %}">Edit car details</a>
     <hr>
   
   
