add car details

--- a/ubercustomer/templates/customer/all_rides.html
+++ b/ubercustomer/templates/customer/all_rides.html
@@ -21,7 +21,7 @@
                         <h5 class="card-title"> {{ride.destination}}</h5>
                         <p class="card-text"> {{ride.leaving_time}}.</p>
                         <a href="#" class="btn btn-primary">
-                            {{ride.driver}}</a>
+                            {{ride.driver}} {{ride.driver.car}}</a>
                     </div>
                     
                 </div>
