--- a/ubercustomer/templates/customer/index.html
+++ b/ubercustomer/templates/customer/index.html
@@ -11,7 +11,7 @@
 
 <div class="customer_options">
         <hr>
-    <a href="{% url 'home' %}">See available rides</a> | <a href="{% url 'home'%}">Schedule ride</a> | <a href="{% url 'home' %}">Create Profile</a> 
+    <a href="{% url 'available_rides' %}">See available rides</a> | <a href="{% url 'home'%}">Schedule ride</a> | <a href="{% url 'home' %}">Create Profile</a> 
     <hr>
   
   
