--- a/uberdriver/templates/driver/index.html
+++ b/uberdriver/templates/driver/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="{% static 'css/index.css' %}">
 
 {% endblock %}
-<h2> Hello driver, welcome!</h2>
+<h2 class="hello"> Hello driver, welcome!</h2>
 
 <div class="driver_options">
         <hr>
