--- a/ubercustomer/templates/customer/index.html
+++ b/ubercustomer/templates/customer/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="{% static 'css/index.css' %}">
 
 {% endblock %}
-<h2> Hello Customer, welcome!</h2>
+<h2 class='hello'> Hello Customer, welcome!</h2>
 
 <div class="customer_options">
         <hr>
