--- a/uber/templates/joint/joint.html
+++ b/uber/templates/joint/joint.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %} 
 {% load static %} 
 {% load bootstrap3 %} 
-{% block content %} 
+{% block content %}
+{{block.super}} 
 {% block styles %} 
 {% bootstrap_css%}
 <link rel="stylesheet" href="{% static 'css/index.css' %}"> {% endblock %}
