--- a/uberdriver/templates/driver/schedule.html
+++ b/uberdriver/templates/driver/schedule.html
@@ -7,9 +7,10 @@
 <div class="container">
     <div class="row">
 
-        <h1 class="text-center">Your Scheduled rides</h1>
+        
 
-        <div class="col-md-4">
+        <div class="col-md-4 col-md-offset-4">
+            <h1 class="text-center">Your Scheduled rides</h1>
             {% for schedule in schedules %}
 
 
