--- a/ubercustomer/templates/customer/all_rides.html
+++ b/ubercustomer/templates/customer/all_rides.html
@@ -26,6 +26,8 @@
                         <p class="card-text"> Available Seats: {{ride.driver.car.seats}}</p>
                         <a href="{% url 'driver_profile' ride.driver.id %}" class="btn btn-primary">
                            see Driver's profile </a>
+                        <a href="{% url 'driver_profile' ride.driver.id %}" class="btn btn-primary">
+                            Book this ride </a>
                     </div>
                     
                 </div>
