--- a/ubercustomer/templates/customer/index.html
+++ b/ubercustomer/templates/customer/index.html
@@ -12,7 +12,7 @@
 
 <div class="customer_options">
         <hr>
-    <a href="{% url 'available_rides' %}">See available rides</a> | <a href="{% url 'home'%}">Schedule ride</a> | <a href="{% url 'home' %}">Create Profile</a> 
+    <a href="{% url 'available_rides' %}">See available rides</a> | <a href="{% url 'home'%}"> Your Booked rides</a> | <a href="{% url 'home' %}">Create Profile</a> 
     <hr>
   
   
